test/fixtures/type-error/noOverload.lys
private fun x(): i32 = 1
private fun x(a: boolean): i32 = 1

fun test(a: f32): i32 = x(a)
